# dicti

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  IMPLEMENTATION_PLAN.md  LICENSE  README.md  ROADMAP.md  SPECIFICATION.md  demo.py  main.py  pyproject.toml  requirements.txt  setup.py  test_basic.py  test_simple.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test.yml
branding/: make_panel_states.py  make_pipeline.py
config/: config.toml.example
design/: icon-preview-v2.html  icon-preview-v3.html  icon-preview.html
docs/: README.md  v0.3-streaming.md
gnome-extension/dicti@local/: extension.js  metadata.json  stylesheet.css
install/: 00-preflight.sh  01-install-keyd.sh  02-build-whisper.sh  03-install-whisper-server.sh  04-install-daemon.sh  05-install-ydotool.sh  06-bind-shortcuts.sh  07-install-gnome-extension.sh  install.sh
keyd/: default.conf
prototype/ibus/: README.md  dicti_ibus.py
specs/: 0001-text-insertion.md  0002-ibus-engine.md  README.md
src/: __init__.py  dictation_app.py
src/audio/: __init__.py  streaming_capture.py
src/dicti/: __init__.py  config.py  daemon.py  indicator.py  insert.py
src/hotkey/: __init__.py  hotkey_manager.py
src/ui/: text_output.py
src/whisper/: __init__.py  streaming_engine.py
systemd/: dictation.service  dicti-indicator.service  whisper-server.service
tests/: test_insert.py  test_streaming.py
